--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        
         "php": ">=8.0.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
@@ -25,6 +24,7 @@
         "symfony/form": "6.0.*",
         "symfony/framework-bundle": "6.0.*",
         "symfony/http-client": "6.0.*",
+        "symfony/http-foundation": "6.0.*",
         "symfony/intl": "6.0.*",
         "symfony/mailer": "6.0.*",
         "symfony/mime": "6.0.*",
