--- a/composer.json
+++ b/composer.json
@@ -99,7 +99,7 @@
         "phpmd": "tools/phpmd/vendor/bin/phpmd src text phpmd.xml || true",
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 9 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
-        "phpdoc": "tools/phpdoc/phpdoc",
+        "phpdoc": "php tools/phpdoc/phpdoc",
         "phpunit": ["@putenv XDEBUG_MODE=coverage", "php bin/phpunit", "@putenv --coverage-text tests/Game"],
         "lint": [
             "@phpcpd",
