--- a/composer.json
+++ b/composer.json
@@ -101,7 +101,10 @@
         "phpstan": "tools/phpstan/vendor/bin/phpstan analyse -l 9 src || true",
         "phpcpd": "tools/phpcpd/vendor/bin/phpcpd src || true",
         "phpdoc": "php tools/phpdoc/phpdoc",
-        "phpunit": ["@putenv XDEBUG_MODE=coverage", "php bin/phpunit", "@putenv --coverage-text tests/Game"],
+        "phpunit": [
+            "@putenv XDEBUG_MODE=coverage",
+            "php bin/phpunit"
+        ],
         "lint": [
             "@phpcpd",
             "@phpmd",
